--- a/receta.css
+++ b/receta.css
@@ -53,10 +53,11 @@ ul {
 }
 
 ol {
-    font-size: 18px;
+    font-size: 25px;
     line-height: 1.5;
     margin: 0;
     padding: 0;
+    font-family: 'Indie Flower', cursive;
 }
 
 li {
@@ -88,5 +89,6 @@ li {
     margin-left: 300px;
     width: 90%;
     height: 50px;
+    font-family: 'Indie Flower', cursive;
 }
 
